added images for campaings case study

--- a/campaigns.html
+++ b/campaigns.html
@@ -38,6 +38,10 @@ layout: default
 	<p>
 		We had a lot of insights related to campaigns which we captured during our regular customer interviews. We structured those finding and shared it with sprint team before the sprint.
 	</p>
+	<figure class="article-img">
+		<img img-small src="{{site.baseurl}}/assets/images/campaigns/interview.png">
+		<figcaption>Questions and Insights</figcaption>
+	</figure>
 </section>
 <section>
 	<h4>The Design Sprint</h4>
@@ -52,7 +56,7 @@ layout: default
 	<p>
 		After series of discussions, we agreed on the following long term goal.
 	</p>
-	<p>"Empowers our customers to drive growth and engagement using calls and SMS".</p>
+	<p>"Empower our customers to drive growth and engagement using calls and SMS".</p>
 	<p>We also decided to answer the following questions through the sprint. 
 		<ul>
 			<li>How do we ensure customers default to Exotel campaigns to drive growth and engagement?</li>
@@ -135,28 +139,97 @@ layout: default
 <section>
 	<h4>Prototyping</h4>
 	<p>The next stage was prototyping the solution. We assigned tasks for sprint team, and each person worked on different part of the prototype. One person was responsible for combining everything into one. Because of the time limitation, we had to skip a lot of details. At the same time, we made sure that, the prototype includes the core ideas. </p>
+	<figure class="article-img">
+		<img img-small src="{{site.baseurl}}/assets/images/campaigns/campaignhome.png">
+		<figcaption>Home Page for Campaigns</figcaption>
+	</figure>
+</section>
+<section>
+	<h4>Testing and Iterations</h4>
+	<p></p>
+	<section>
+		<h5></h5>
+		<p></p>
+		<figure class="article-img">
+			<img img-small src="{{site.baseurl}}/assets/images/campaigns/campaign-setup.png">
+			<figcaption>Home Page for Campaigns</figcaption>
+		</figure>
+	</section>
+	<section>
+		<h5></h5>
+		<p></p>
+		<figure class="article-img">
+			<img img-small src="{{site.baseurl}}/assets/images/campaigns/content.png">
+			<figcaption>Content and Schedule</figcaption>
+		</figure>
+	</section>
+	<section>
+		<h5></h5>
+		<p></p>
+		<figure class="article-img">
+			<img img-small src="{{site.baseurl}}/assets/images/campaigns/confirm.png">
+			<figcaption>Confirmation</figcaption>
+		</figure>
+	</section>
+	<section>
+		<h5></h5>
+		<p></p>
+		<figure class="article-img">
+			<img img-small src="{{site.baseurl}}/assets/images/campaigns/listhome.png">
+			<figcaption>Contact List</figcaption>
+		</figure>
+	</section>
+	<section>
+		<h5></h5>
+		<p></p>
+		<figure class="article-img">
+			<img img-small src="{{site.baseurl}}/assets/images/campaigns/listfieldtags.png">
+			<figcaption>List Fields and Tags</figcaption>
+		</figure>
+	</section>
 </section>
 <section>
 	<h4></h4>
 	<p></p>
+	<figure class="article-img">
+		<video controls>
+			<source src="{{site.baseurl}}/assets/images/campaigns/campainghomevideo.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video> 
+		<figcaption>Campaign Home</figcaption>
+	</figure>
+	<figure class="article-img">
+		<video controls>
+			<source src="{{site.baseurl}}/assets/images/campaigns/createcampaign.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video> 
+		<figcaption>Create campaign flow</figcaption>
+	</figure>
+	<figure class="article-img">
+		<video controls>
+			<source src="{{site.baseurl}}/assets/images/campaigns/createlist.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video> 
+		<figcaption>Create list flow</figcaption>
+	</figure>
+	<figure class="article-img">
+		<video controls>
+			<source src="{{site.baseurl}}/assets/images/campaigns/listdetails.mp4" type="video/mp4">
+			Your browser does not support the video tag.
+		</video> 
+		<figcaption>List Details</figcaption>
+	</figure>
 </section>
 <section>
-	<h4></h4>
+	<h4>Creating specifications</h4>
 	<p></p>
+	<figure class="article-img">
+		<img img-small src="{{site.baseurl}}/assets/images/campaigns/spec.png">
+		<figcaption>Behaviour and UI Spec</figcaption>
+	</figure>
 </section>
-<!-- <section>
-	<h4>Conclusion</h4>
-	<p></p>
-</section> -->
 <section>
 	<p><a href="{{site.baseurl}}/works">More Works ></a></p>
 </section>
 
-	<figure class="article-img">
-		<img src="{{site.baseurl}}/assets/images/campaigns/goalandmap.jpg">
-		<figcaption></figcaption>
-	</figure>
-	<video controls>
-		<source src="{{site.baseurl}}/assets/images/" type="video/mp4">
-		Your browser does not support the video tag.
-	</video> 
+
