--- a/works.html
+++ b/works.html
@@ -3,6 +3,11 @@ layout: default
 ---
 <h3>Selected Works</h3>
 <section class="works">
+	<h4>Campaigns for Exotel</h4>
+	<p>Empower the customers to drive growth and engagement using calls and SMS.</p>
+	<p><a href="{{site.baseurl}}/campaigns">Read More ></a></p>
+</section>
+<section class="works">
 	<h4>Exotel Call Analytics</h4>
 	<p>Monitor, analyse and derive insights from voice communication data.</p>
 	<p><a href="{{site.baseurl}}/analytics">Read More ></a></p>
@@ -12,4 +17,4 @@ layout: default
 	<p>Better tool for customer support operations.</p>
 	<p><a href="{{site.baseurl}}/console">Read More ></a></p>
 </section> 	
-<p class="meta">Thanks to NDAs, I can't put everything on my website. But I can talk about some work in person. </p>
+<p class="meta">Thanks to NDAs, I can't put all my works on this website. But I can walkthrough some of those works in person. </p>
