added recurring campaign

--- a/campaigns.html
+++ b/campaigns.html
@@ -24,7 +24,7 @@ layout: default
 	</p>
 </section>
 <section>
-	<h4>Who User What?</h4>
+	<h4>Who Uses What?</h4>
 	<p>Campaigns were majorly used for promotional purposes, to drive growth or to engage customers. That means the users vary from growth hacker in the marketing team to customer engagement or operation manager. Also, there are transactional use cases for campaigns. For example, pick up scheduling in e-commerce. </p>
 </section>
 <section>
@@ -206,6 +206,10 @@ layout: default
 	<section>
 		<h5>Recurring Campaigns</h5>
 		<p>To address pain point of doing the similar campaigns again and again, the team came up with recurring campaigns. The customer can schedule a campaign which runs on a specified time frame. Combining this with new list feature opens up the opportunity to automate the campaign. For example, a growth hacker can automate a recurring engagement campaign for newly signed up users each week. Once the campaign is scheduled, customers can dynamically update the list each week.</p>
+		<figure class="article-img">
+			<img img-small src="{{site.baseurl}}/assets/images/campaigns/recurring.png">
+		<figcaption>Create Recurring Campaign</figcaption>
+	</figure>
 	</section>
 </section>
 <section>
@@ -224,8 +228,9 @@ layout: default
 	</figure>
 </section>
 <section>
-	<h4>Creating specifications</h4>
-	<p></p>
+	<h4>Detailed Specs</h4>
+	<p>I created detailed documentation to communicate the design to the engineering team. It included the behaviour spec and user interface spec. 
+	</p>
 	<figure class="article-img">
 		<img img-small src="{{site.baseurl}}/assets/images/campaigns/spec.png">
 		<figcaption>Behaviour and UI Spec</figcaption>
