edited bio, edited section style

--- a/campaigns.html
+++ b/campaigns.html
@@ -52,7 +52,7 @@ layout: default
 	<p>The team was one product manager and two designers. We included people from sales, marketing, customer success and engineering in different sessions during the sprint.</p>
 </section>
 <section>
-	<h4>Long Tearm Goal and Sprint Questions</h4>
+	<h4>Long Term Goal and Sprint Questions</h4>
 	<p>
 		After series of discussions, we agreed on the following long term goal.
 	</p>
@@ -205,7 +205,7 @@ layout: default
 	</section>
 	<section>
 		<h5>Recurring Campaigns</h5>
-		<p>To address pain point of doing the similar campaigns again and again, the team came up with recurring campaigns. The customer can schedule a campaign which runs on a specified time frame. Combining this with new list feature opens up the opportunity to automate the campaign. For example, a growth hacker can automate a recurring engagement campaign for newly signed up users each week. Once the campaign is scheduled, customers can dynamically update the list each week.</p>
+		<p>To simplify the process of creating similar campaigns, the team came up with recurring campaigns. The customer can schedule a campaign which runs on a specified time frame. Combining this with new list feature opens up the opportunity to automate the campaign. For example, a growth hacker can automate a recurring engagement campaign for newly signed up users each week. Once the campaign is scheduled, customers can dynamically update the list each week.</p>
 		<figure class="article-img">
 			<img img-small src="{{site.baseurl}}/assets/images/campaigns/recurring.png">
 		<figcaption>Create Recurring Campaign</figcaption>
