improved the order of sections

--- a/campaigns.html
+++ b/campaigns.html
@@ -29,15 +29,7 @@ layout: default
 </section>
 <section>
 	<h4>Research</h4>
-	<p>
-		<ul>
-			<li>One to one interviews with customers</li>
-			<li>Analysis of support tickets related to campaigns</li>
-		</ul>
-	</p>
-	<p>
-		We had a lot of insights related to campaigns which we captured during our regular customer interviews. We structured those finding and shared it with sprint team before the sprint.
-	</p>
+	<p>We have been doing continues customer interviews to identify issues and opportunities related to the product and platform. Along with that, the analysis of customer support tickets helped us to get an overview of issues related to campaigns.</p>
 	<figure class="article-img">
 		<img img-small src="{{site.baseurl}}/assets/images/campaigns/interview.png">
 		<figcaption>Questions and Findings</figcaption>
