--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <h3>Hello There.</h3>
 <p class="lead">I am Abdul Raoof.</p>
 <p class="lead">A designer from India.</p>
-<p class="lead">Currently working with Exotel.</p>
+<p class="lead">Currently working with <a href="https://www.informatica.com/">Informatica</a>.</p>
 <p class="lead">My journal is called <a href="{{site.baseurl}}/journal">Guided Fantasy</a>.</p>
 
 
