added books, modified bio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <p class="lead">I am Abdul Raoof.</p>
 <p class="lead">A designer from India.</p>
 <p class="lead">Currently working with <a href="https://www.informatica.com/">Informatica</a>.</p>
-<p class="lead">My journal is called <a href="{{site.baseurl}}/journal">Guided Fantasy</a>.</p>
+<p class="lead">I <a href="{{site.baseurl}}/books">read</a>. I <a href="{{site.baseurl}}/journal">write</a>, and <a href="https://www.instagram.com/guidedfantasy/">I travel</a>.</p>
 
 
 	
