--- a/journal.html
+++ b/journal.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
 <p class="lead">
-	The <em>Guided Fantasy</em> is my journal. My thoughts on the things that I care about. And evolution of my world views. 
+    Coming soon. 
 </p>
