updated quotes,readings and few other stuff

--- a/books.html
+++ b/books.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-<p class="lead">Some of my favourite books.</p>
-
+<h3>Books I Like</h3>
 <h5>Design</h5>
 <ul>
     <li>Designing Interactions by Bill Moggridge</li>
@@ -12,12 +11,12 @@ layout: default
     <li>On Web Typography by Jason Santa Maria</li>
     <li>Designing Interfaces by Jenifer Tidwell</li>
 </ul>
-<h5>Vision</h5>
+<h5>Education</h5>
 <ul>
     <li>Mindstorms: Children, Computers, And Powerful Ideas by Seymour Papert</li>
     <li>The Society of Mind by Marvin Minsky</li>
 </ul>
-<h5>Novels</h5>
+<h5>Fiction</h5>
 <ul>
     <li>The Trial by Franz Kafka</li>
     <li>The Stranger by Albert Camus</li>
