--- a/quotes.html
+++ b/quotes.html
@@ -11,10 +11,6 @@ layout: default
 		<p class="author">Edward Tufte</p>
 	</blockquote>
 	<blockquote>
-		<p>How does what I see come to be seen by me?</p>
-		<p class="author">Edward Tufte</p>
-	</blockquote>
-	<blockquote>
 		<p>Numbers on the screen are representations of the real world.</p>
 		<p>Look at the real world, not just representations. Walk around what you want to learn about.</p>
 		<p class="author">Edward Tufte</p>
@@ -60,5 +56,45 @@ layout: default
 		finally noticed, not just that end users had functioning minds, but that a better understanding of how those minds worked would completely shift the paradigm of interaction.
 		</p>
 		<p class="author">Alan Kay</p>
+	</blockquote>	
+    <blockquote>
+		<p>You are free, and that is why you are lost.
+		</p>
+		<p class="author">Franz Kafka</p>
+	</blockquote>    
+    <blockquote>
+		<p>You will never be happy if you continue to search for what happiness consists of. You will never live if you are looking for the meaning of life.
+		</p>
+		<p class="author">Albert Camus</p>
+	</blockquote>    
+    <blockquote>
+		<p>One always has exaggerated ideas about what one doesn't know.
+		</p>
+		<p class="author">Albert Camus</p>
 	</blockquote>
+    <blockquote>
+		<p>Laziness is built deep into our nature.
+		</p>
+		<p class="author">Daniel Kahneman</p>
+	</blockquote>     
+    <blockquote>
+		<p>Not all illusions are visual. There are illusions of thought, which we call cognitive illusions.
+		</p>
+		<p class="author">Daniel Kahneman</p>
+	</blockquote>     
+    <blockquote>
+		<p>We can be blind to the obvious, and we are also blind to our blindness.
+		</p>
+		<p class="author">Daniel Kahneman</p>
+	</blockquote>  
+    <blockquote>
+		<p>There have always been three kinds of people in the world, the High, the Middle and the Low. The world has changed but society always contains these three groups.
+		</p>
+		<p class="author">George Orwell</p>
+	</blockquote>      
+    <blockquote>
+		<p>Wisdom cannot be passed on. Wisdom that a wise man attempts to pass on always sounds like foolishness.
+		</p>
+		<p class="author">Hermann Hesse</p>
+	</blockquote>  
 </div>
